--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -418,17 +418,32 @@
               <th style="width: 17.5%; padding: 15px; font-weight: 500; font-size: 0.9em; text-align: center;">To Par</th>
             </tr>
           </thead>
-          <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
-            <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 17, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
-            <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 12, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
+         <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
+            <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 17, 2026</td>
+              <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; 
+                 font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
+            <tr style="border-bottom: 1px solid #eee; background: #fffaf0;"><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700;">Feb 12, 2026</td>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; 
+                 font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
             
-            <tr style="border-bottom: 1px solid #eee; background: #fffaf0;"><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700;">Feb 10, 2026</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.15em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-4</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Feb 10, 2026</td>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+                font-family: 'Oswald', sans-serif; font-size: 1.15em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-4</td></tr>
             
-            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
-            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 26, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; font-family: 'Oswald', sans-serif; font-size: 1.1em;">73</td><td style="padding: 12px; font-weight: 600;">+1</td></tr>
-            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 01, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
-            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Aug 28, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
-            <tr><td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+                 font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 26, 2025</td>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; 
+                 font-family: 'Oswald', sans-serif; font-size: 1.1em;">73</td><td style="padding: 12px; font-weight: 600;">+1</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 01, 2025</td>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+                 font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Aug 28, 2025</td>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+                 font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
+            <tr><td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
           </tbody>
           <tfoot>
           <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
