--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -580,7 +580,7 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">-</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7; font-weight: 700;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
 
@@ -596,7 +596,7 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">-</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
       </tbody>
@@ -624,27 +624,18 @@
 </style>
 
       <div style="text-align: right;">
-
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
-
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-</span>
-
-    </div>
-
-    <div style="text-align: right;">
-
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Par</span>
-
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-</span>
-
-    </div>
-
-    <div style="text-align: right;">
-
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Rank</span>
-
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
+    </div>
 
+    <div style="text-align: right;">
+      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Par</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
+    </div>
+
+    <div style="text-align: right;">
+      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Rank</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
   </div>
