--- a/test-1.html
+++ b/test-1.html
@@ -618,27 +618,26 @@
 
         <tr>
           <td class="col-left">
-            <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
-            <div style="display: flex; align-items: center; gap: 8px; flex-wrap: wrap;">
-  <div class="pairing-btn" onclick="openPairing(' ')" style="display: inline-flex; align-items: center; gap: 4px; cursor: pointer;">
-    <span>Pairing</span>
-    <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M15 3h6v6"></path>
-      <path d="M10 14L21 3"></path>
-      <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-    </svg>
-  </div>
-  
-  <div class="pairing-btn" onclick="openPairing(' ')" style="display: inline-flex; align-items: center; gap: 4px; cursor: pointer;">
-    <span>Scorecard</span>
-    <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M15 3h6v6"></path>
-      <path d="M10 14L21 3"></path>
-      <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-    </svg>
-  </div>
-</div>          
-            <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
+            <div style="display: flex; align-items: center; gap: 8px;">
+              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
+              <div class="pairing-btn" onclick="openPairing(' ')">
+                <span>Pairing</span>
+                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M15 3h6v6"></path>
+                  <path d="M10 14L21 3"></path>
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                </svg>
+              </div>
+              <div class="pairing-btn" onclick="openPairing(' ')">
+                <span>Scorecard</span>
+                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M15 3h6v6"></path>
+                  <path d="M10 14L21 3"></path>
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                </svg>
+              </div>
+            </div>
+            <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
@@ -650,7 +649,6 @@
           <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
-  
       </tbody>
     </table>
   </div>
