--- a/test-1.html
+++ b/test-1.html
@@ -552,7 +552,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
-              <div class="pairing-btn" onclick="openPairing(' ')">
+              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -560,7 +560,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing(' ')">
+              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -586,7 +586,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
-              <div class="pairing-btn" onclick="openPairing(' ')">
+              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -594,7 +594,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing(' ')">
+              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -620,7 +620,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
-              <div class="pairing-btn" onclick="openPairing(' ')">
+              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -628,7 +628,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing(' ')">
+              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
