--- a/test-1.html
+++ b/test-1.html
@@ -564,14 +564,14 @@ gtag('config', 'G-H1JW8YBDZ8');
       <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 0;">
         <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 6px 12px; border-radius: 6px;">
           <span class="status-dot"></span>
-          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">IN PROGRESS</span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">UPCOMING</span>
         </div>
         <div>
           <div style="display: flex; align-items: baseline; gap: 6px;">
-            <span style="color: #0c2340; font-weight: 900; font-size: 17px;">Compadres Collegiate</span>
-            <span style="color: #94a3b8; font-size: 11px; font-weight: 700;">(Feb 1-3)</span>
+            <span style="color: #0c2340; font-weight: 900; font-size: 17px;">Military Collegiate</span>
+            <span style="color: #94a3b8; font-size: 11px; font-weight: 700;">(Feb 23-24)</span>
           </div>
-          <span style="color: #64748b; font-size: 12px; font-weight: 600;">Iberostar Playa Paraiso, Mexico</span>
+          <span style="color: #64748b; font-size: 12px; font-weight: 600;">San Antonio, Texas / TPC San Antonio - Canyons</span>
         </div>
       </div>
 
@@ -583,20 +583,20 @@ gtag('config', 'G-H1JW8YBDZ8');
           </div>
           <div style="display: flex; justify-content: flex-end; gap: 30px; align-items: center;">
             <div style="display: flex; gap: 10px; width: 85px; justify-content: flex-end;">
-              <span class="under-par" style="font-size: 16px;">70</span>
-              <span style="color: #cbd5e1; font-size: 16px;">—</span>
-              <span style="color: #cbd5e1; font-size: 16px;">—</span>
+              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
             </div>
             <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
-              <span class="under-par" style="font-size: 16px;">-2</span>
-              <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(70)</span>
+              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
             </div>
           </div>
         </div>
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 34px;">
           <span style="color: #94a3b8; font-size: 8px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
-          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
+          <div style="color: #cbd5e1; font-size: 18px; font-weight: 900; line-height: 1;">-</div>
         </div>
 
         <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0; background: #ffffff;">
@@ -610,8 +610,12 @@ gtag('config', 'G-H1JW8YBDZ8');
 
   <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="focus-container">
     <div style="display: flex; align-items: center; gap: 16px; flex: 1;">
-      <div class="focus-badge"><span class="status-dot"></span>CURRENT FOCUS</div>
-      <div style="color: #475569; font-size: 14px; font-weight: 700;">Recalibrating putting touch & driver alignment for Cancun (Travel Squad).</div>
+      <h2 style="font-size: 17px; color: #0c2340; margin: 0; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; line-height: 1.2;">
+        CURRENT FOCUS
+      </h2>
+      <p style="margin: 4px 0 0 0; color: #64748b; font-size: 13px; font-weight: 500; letter-spacing: -0.1px; line-height: 1.4; word-break: keep-all;">
+        Current priorities & seasonal progress
+      </p>
     </div>
     <div class="focus-arrow-svg">
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
